--- a/Profile Folder/chrome/styles/partials/content/firefox/pages/chrome-21/global/_main.scss
+++ b/Profile Folder/chrome/styles/partials/content/firefox/pages/chrome-21/global/_main.scss
@@ -169,9 +169,7 @@ recommended-themes-section,
 		margin-block: 0 !important;
 
 		h2 {
-			position: unset;
 			height: unset;
-			width: unset;
 		}
 	}
 }
